------------------------------------------------------------------------
r2029 | dahnke | 2022-07-13 12:08:28

Changed paths:
 M .gitignore
 M CHANGES.txt


1) Fixed:     Corrected a problem with own atlas maps saved as float 
              rather than integer in cat_main_roi. 
2) Fixed:     Create warning in cat_main_roi in case of atlas maps  
              with positive x values that cannot be mapped via the used 
              spm_sample_vol function. User has to provide images in
              the right orientation and space.
3) Fixed:     Use whole rather than natural numbers in cat_conf_tools to
              avoid opening of the input image in the head trimming tool.               
4) Fixed:     Added checks in cat_run to detect incorrect named own atlases. 
              ------------------------------------------------------------------------
r2024 | gaser | 2022-07-12 22:35:28

Updated website links
------------------------------------------------------------------------
r2022 | gaser | 2022-07-11 12:35:28

Changed paths:
 M CHANGES.txt

Added some HowTos for fMRI and PET.
------------------------------------------------------------------------
r2021 | gaser | 2022-07-11 12:26:37

Changed paths:
 M .gitignore
 M CHANGES.txt
 M Contents.m
 M Makefile
 M html/cat.html


Updated .gitignore.
Updated Makefile to consider new file structure.
------------------------------------------------------------------------
r2018 | gaser | 2022-07-07 16:38:42

Changed paths:
 M CHANGES.txt
 M Makefile
 M html/cat.html
 M html/cat.txt


Updated Makefile to copy cat12-html to another folder.
Updated html help text.
------------------------------------------------------------------------
r2017 | gaser | 2022-07-05 21:30:20

Changed paths:
 M CHANGES.txt
 M git_ci_log
 M standalone/cat_standalone.sh
 A standalone/cat_standalone_get_IQR.m


Updated git_ci_log and added -a flag to commit.
Added new option for getting image quality to cat_standalone.sh.